feat: Enable basic authentication for REST API backed by a k8s secret

--- a/stackgres-k8s/e2e/spec/default.values.yaml
+++ b/stackgres-k8s/e2e/spec/default.values.yaml
@@ -16,3 +16,6 @@ sidecar:
     allowAutobind: false
 nonProduction:
   disableClusterPodAntiAffinity: true
+authentication:
+  user: e2e
+  password: test
