--- a/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
@@ -58,6 +58,8 @@ spec:
           - name: GRAFANA_EMBEDDED
             value: "true"
           {{ end }}
+          - name: AUTHENTICATION_SECRET_NAME
+            value: "{{ .Release.Name }}"
         ports:
         - containerPort: 8080
           name: "http"
