--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -25,6 +25,7 @@
     <stackgres.prometheus.grafanaEmbedded>false</stackgres.prometheus.grafanaEmbedded>
     <stackgres.documentation.uri>https://stackgres.io/doc/</stackgres.documentation.uri>
     <stackgres.documentation.errorsPath>/07-developer-documentation/01-error-types#</stackgres.documentation.errorsPath>
+    <stackgres.authentication.secretName>stackgres-operator</stackgres.authentication.secretName>
 
     <quarkus.http.ssl.certificate.file>/etc/operator/certs/server.crt</quarkus.http.ssl.certificate.file>
     <quarkus.http.ssl.certificate.key-file>/etc/operator/certs/root.key</quarkus.http.ssl.certificate.key-file>
@@ -52,7 +53,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-elytron-security-properties-file</artifactId>
+      <artifactId>quarkus-elytron-security</artifactId>
     </dependency>
 
     <dependency>
@@ -118,7 +119,6 @@
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>kubernetes-server-mock</artifactId>
-      <version>${kubernetes-client.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
