--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -28,15 +28,6 @@ quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
 quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
 
-# Authentication
-
-quarkus.http.auth.basic=true
-quarkus.security.users.embedded.enabled=true
-quarkus.security.users.embedded.realm-name=StackGres
-quarkus.security.users.embedded.plain-text=true
-quarkus.security.users.embedded.users.admin=st4ckgr3s
-quarkus.security.users.embedded.roles.admin=Admin,admin
-
 # StackGres Configuration
 stackgres.operatorName=${stackgres.operatorName}
 stackgres.operatorNamespace=${stackgres.operatorNamespace}
@@ -49,3 +40,4 @@ stackgres.prometheus.allowAutobind=${stackgres.prometheus.allowAutobind}
 stackgres.prometheus.grafanaEmbedded=${stackgres.prometheus.grafanaEmbedded}
 stackgres.documentation.uri=${stackgres.documentation.uri}
 stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
+stackgres.authentication.secretName=${stackgres.authentication.secretName}
