feat: creating pod and persistent volume herarchies and moving the cluster volume size and storage inside that

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -25,7 +25,9 @@ spec:
     downloadDiskConcurrency: {{ .Values.cluster.restore.downloadDiskConcurrency }}
     {{- end }}    
   {{- end }}
-  volumeSize: '{{ .Values.cluster.volumeSize }}'
+  pods:
+    persistentVolume:
+      volumeSize: '{{ .Values.cluster.volumeSize }}'
   {{- if .Values.cluster.storageClass }}
   {{- if eq "-" .Values.cluster.storageClass }}
   storageClass: ""
