--- a/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
@@ -61,17 +61,27 @@ spec:
                 Name of the [SGInstanceProfile](https://stackgres.io/doc/latest/04-postgres-cluster-management/03-resource-profiles/)
                 to use. A SGInstanceProfile defines CPU and memory limits. Must exist before creating the cluster. If you
                 don't select a profile, a default (currently: 1 core, 2 GiB RAM) one will be used.
-            volumeSize:
-              type: string
-              pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
-              description: >
-                Size of the PersistentVolume to be created for each instance of the cluster. Size must be specified
-                either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
-            storageClass:
-              type: string
-              description: >
-                Name of an existing StorageClass in the K8s cluster, that will be used to create the PersistentVolumes
-                for the instances of this cluster.
+            pods:
+              type: object
+              description: Cluster pod's configuration
+              properties:
+                persistentVolume:
+                  type: object
+                  description: Pod's persistent volume configuration
+                  properties:
+                    volumeSize:
+                      type: string
+                      pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
+                      description: >
+                        Size of the PersistentVolume to be created for each instance of the cluster. Size must be specified
+                        either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
+                    storageClass:
+                      type: string
+                      description: >
+                        Name of an existing StorageClass in the K8s cluster, that will be used to create the PersistentVolumes
+                        for the instances of this cluster.
+                  required: ["volumeSize"]
+              required: ["persistentVolume"]
             configurations:
               type: object
               description: > 
@@ -147,4 +157,4 @@ spec:
                     The same best practice applies to databases on containers. By default, StackGres will not allow to
                     run more than one StackGres pod on a given K8s node. Set this property to true to allow more than
                     one StackGres pod per node.
-          required: [ "instances", "postgresVersion", "volumeSize" ]
+          required: [ "instances", "postgresVersion", "pods" ]
