feat: reanming volumeSize property to size

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -27,7 +27,7 @@ spec:
   {{- end }}
   pods:
     persistentVolume:
-      volumeSize: '{{ .Values.cluster.volumeSize }}'
+      size: '{{ .Values.cluster.volumeSize }}'
   {{- if .Values.cluster.storageClass }}
   {{- if eq "-" .Values.cluster.storageClass }}
   storageClass: ""
