feat: moving cluster restore hierarchy into initialData hierarchy

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -19,10 +19,11 @@ spec:
     {{- end }}
   sgInstanceProfile: '{{ .Values.cluster.profile }}'
   {{- if .Values.cluster.restore }}
-  restore:
-    fromBackup: {{ .Values.cluster.restore.fromBackup }}
-    {{- if .Values.cluster.restore.downloadDiskConcurrency }}
-    downloadDiskConcurrency: {{ .Values.cluster.restore.downloadDiskConcurrency }}
+  initialData:
+    restore:
+      fromBackup: {{ .Values.cluster.restore.fromBackup }}
+      {{- if .Values.cluster.restore.downloadDiskConcurrency }}
+      downloadDiskConcurrency: {{ .Values.cluster.restore.downloadDiskConcurrency }}
     {{- end }}    
   {{- end }}
   pods:
