feat: Enable basic authentication for REST API backed by a k8s secret

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -28,6 +28,10 @@ quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
 quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
 
+# Authentication
+
+quarkus.http.auth.basic=true
+
 # StackGres Configuration
 stackgres.operatorName=${stackgres.operatorName}
 stackgres.operatorNamespace=${stackgres.operatorNamespace}
