--- a/stackgres-k8s/install/helm/stackgres-operator/crds/backup-config-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/backup-config-crd.yaml
@@ -27,31 +27,32 @@ spec:
         spec:
           type: object
           properties:
-            retention:
-              type: integer
-              description: "Retains specified number of full backups. Default is 5"
-            fullSchedule:
-              type: string
-              description: "Specify when to perform full backups using cron syntax:\n<minute: 0 to 59, or *> <hour: 0 to 23, or * for any value. All times UTC> <day of the month: 1 to 31, or *> <month: 1 to 12, or *> <day of the week: 0 to 7 (0 and 7 both represent Sunday), or *>. If not specified full backups will be performed each day at 05:00 UTC"
-            fullWindow:
-              type: integer
-              description: "Specify the time window in minutes where a full backup will start happening after the point in time specified by fullSchedule. If for some reason the system is not capable to start the full backup it will be skipped. If not specified the window will be of 1 hour."
-            compressionMethod:
-              type: string
-              description: "To configure compression method used for backups. Possible options are: lz4, lzma, brotli. Default method is lz4. LZ4 is the fastest method, but compression ratio is bad. LZMA is way much slower, however it compresses backups about 6 times better than LZ4. Brotli is a good trade-off between speed and compression ratio which is about 3 times better than LZ4."
-              enum: [ "lz4", "lzma", "brotli" ]
-            networkRateLimit:
-              type: integer
-              description: "To configure the network upload rate limit during uploads in bytes per second."
-            diskRateLimit:
-              type: integer
-              description: "To configure disk read rate limit during uploads in bytes per second."
-            uploadDiskConcurrency:
-              type: integer
-              description: "To configure how many concurrency streams are reading disk during uploads. By default 1 stream."
-            tarSizeThreshold:
-              type: integer
-              description: "To configure the size of one backup bundle (in bytes). Smaller size causes granularity and more optimal, faster recovering. It also increases the number of storage requests, so it can costs you much money. Default size is 1 GB (1 << 30 - 1 bytes)."
+            baseBackups:
+              type: object
+              description: Back backups configuration
+              properties:
+                retention:
+                  type: integer
+                  description: "Retains specified number of full backups. Default is 5"
+                cronSchedule:
+                  type: string
+                  description: "Specify when to perform full backups using cron syntax:\n<minute: 0 to 59, or *> <hour: 0 to 23, or * for any value. All times UTC> <day of the month: 1 to 31, or *> <month: 1 to 12, or *> <day of the week: 0 to 7 (0 and 7 both represent Sunday), or *>. If not specified full backups will be performed each day at 05:00 UTC"
+                compression:
+                  type: string
+                  description: "To configure compression method used for backups. Possible options are: lz4, lzma, brotli. Default method is lz4. LZ4 is the fastest method, but compression ratio is bad. LZMA is way much slower, however it compresses backups about 6 times better than LZ4. Brotli is a good trade-off between speed and compression ratio which is about 3 times better than LZ4."
+                  enum: [ "lz4", "lzma", "brotli" ]
+                performance: 
+                  type: object
+                  properties:
+                    maxNetworkBandwitdh:
+                      type: integer
+                      description: "To configure the network upload rate limit during uploads in bytes per second."
+                    maxDiskBandwitdh:
+                      type: integer
+                      description: "To configure disk read rate limit during uploads in bytes per second."
+                    uploadDiskConcurrency:
+                      type: integer
+                      description: "To configure how many concurrency streams are reading disk during uploads. By default 1 stream."
             storage:
               type: object
               description: "Backup storage configuration"
@@ -72,40 +73,44 @@ spec:
                       type: string
                       pattern: '(/[^/]*)*$'
                       description: "The AWS S3 path (eg. /path/to/folder)."
-                    credentials:
+                    awsCredentials:
                       type: object
                       description: "The credentials to access AWS S3 for writing and reading."
                       properties:
-                        accessKey:
+                        secretKeySelectors:
                           type: object
-                          description: "AWS Access Key ID secret"
                           properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                        secretKey:
-                          type: object
-                          description: "AWS Secret Access Key"
-                          properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                      required: [ "accessKey", "secretKey" ]
+                            accessKeyId:
+                              type: object
+                              description: "AWS Access Key ID secret"
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                            secretAccessKey:
+                              type: object
+                              description: "AWS Secret Access Key"
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                          required: [ "accessKeyId", "secretAccessKey" ]
+                      required: [ "secretKeySelectors" ]
                     region:
                       type: string
                       description: "The AWS S3 region. Region can be detected using s3:GetBucketLocation, but if you wish to avoid this API call or forbid it from the applicable IAM policy, specify this property."
                     storageClass:
                       type: string
                       description: "By default, the \"STANDARD\" storage class is used. Other supported values include \"STANDARD_IA\" for Infrequent Access and \"REDUCED_REDUNDANCY\" for Reduced Redundancy."
-                  required: [ "bucket", "credentials" ]
+                  required: [ "bucket", "awsCredentials" ]
                 s3compatible:
                   type: object
                   description: "Amazon Web Services S3 Compatible configuration"
@@ -118,33 +123,37 @@ spec:
                       type: string
                       pattern: '(/[^/]*)*$'
                       description: "The AWS S3 path (eg. /path/to/folder)."
-                    credentials:
+                    awsCredentials:
                       type: object
                       description: "The credentials to access AWS S3 for writing and reading."
                       properties:
-                        accessKey:
+                        secretKeySelectors:
                           type: object
-                          description: "AWS Access Key ID secret"
-                          properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                        secretKey:
-                          type: object
-                          description: "AWS Secret Access Key"
-                          properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                      required: [ "accessKey", "secretKey" ]
+                          properties:    
+                            accessKeyId:
+                              type: object
+                              description: "AWS Access Key ID secret"
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                            secretAccessKey:
+                              type: object
+                              description: "AWS Secret Access Key"
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                          required: [ "accessKeyId", "secretAccessKey" ]
+                      required: [ "secretKeySelectors" ]
                     region:
                       type: string
                       description: "The AWS S3 region. Region can be detected using s3:GetBucketLocation, but if you wish to avoid this API call or forbid it from the applicable IAM policy, specify this property."
@@ -157,7 +166,7 @@ spec:
                     storageClass:
                       type: string
                       description: "By default, the \"STANDARD\" storage class is used. Other supported values include \"STANDARD_IA\" for Infrequent Access and \"REDUCED_REDUNDANCY\" for Reduced Redundancy."
-                  required: [ "bucket", "credentials" ]
+                  required: [ "bucket", "awsCredentials" ]
                 gcs:
                   type: object
                   description: "Google Cloud Storage configuration"
@@ -170,24 +179,28 @@ spec:
                       type: string
                       description: "Specify path in the bucket where to store backups (eg. /walg-folder)."
                       pattern: "^(/[^/]*)*$"
-                    credentials:
+                    gcpCredentials:
                       type: object
                       description: "The credentials to access GCS for writing and reading."
                       properties:
-                        serviceAccountJsonKey:
+                        secretKeySelectors:
                           type: object
-                          description: "A service account json key from GCP."
                           properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                      required: [ "serviceAccountJsonKey" ]
-                  required: [ "bucket", "credentials" ]
-                azureblob:
+                            serviceAccountJSON:
+                              type: object
+                              description: "A service account json key from GCP."
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                          required: [ "serviceAccountJSON" ]
+                      required: [ "secretKeySelectors" ]    
+                  required: [ "bucket", "gcpCredentials" ]
+                azureBlob:
                   type: object
                   description: "Azure Blob Storage configuration"
                   properties:
@@ -199,33 +212,36 @@ spec:
                       type: string
                       description: "Specify path in the bucket where to store backups in Azure storage (eg. /walg-folder)."
                       pattern: "^(/[^/]*)*$"
-                    credentials:
+                    azureCredentials:
                       type: object
                       description: "The credentials to access Azure Blob Storage for writing and reading."
                       properties:
-                        account:
+                        secretKeySelectors:
                           type: object
-                          description: "The name of the storage account."
                           properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                        accessKey:
-                          type: object
-                          description: "The primary or secondary access key for the storage account."
-                          properties:
-                            key:
-                              type: string
-                              description: "The key of the secret to select from. Must be a valid secret key."
-                            name:
-                              type: string
-                              description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
-                          required: [ "key", "name" ]
-                      required: [ "account", "accessKey" ]
-                  required: [ "bucket", "credentials" ]
+                            storageAccount:
+                              type: object
+                              description: "The name of the storage account."
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                            accessKey:
+                              type: object
+                              description: "The primary or secondary access key for the storage account."
+                              properties:
+                                key:
+                                  type: string
+                                  description: "The key of the secret to select from. Must be a valid secret key."
+                                name:
+                                  type: string
+                                  description: "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
+                              required: [ "key", "name" ]
+                          required: [ "storageAccount", "accessKey" ]
+                  required: [ "bucket", "azureCredentials" ]
               required: ["type"]
           required: ["storage"]
