--- a/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
@@ -1,14 +1,14 @@
-compressionMethod=lz4
-fullSchedule=0 5 * * *
-fullWindow=1
-retention=5
-tarSizeThreshold=1073741823
-uploadDiskConcurrency=1
+baseBackups.compression=lz4
+baseBackups.cronSchedule=0 5 * * *
+baseBackups.retention=5
+baseBackups.performance.maxNetworkBandwitdh=1
+baseBackups.performance.maxDiskBandwitdh=1
+baseBackups.performance.uploadDiskConcurrency=1
 storage.type=s3compatible
-storage.s3compatible.credentials.accessKey.key=accesskey
-storage.s3compatible.credentials.accessKey.name=minio
-storage.s3compatible.credentials.secretKey.key=secretkey
-storage.s3compatible.credentials.secretKey.name=minio
+storage.s3compatible.awsCredentials.secretKeySelectors.accessKeyId.key=accesskey
+storage.s3compatible.awsCredentials.secretKeySelectors.accessKeyId.name=minio
+storage.s3compatible.awsCredentials.secretKeySelectors.secretAccessKey.key=secretkey
+storage.s3compatible.awsCredentials.secretKeySelectors.secretAccessKey.name=minio
 storage.s3compatible.endpoint=http://minio:9000
 storage.s3compatible.forcePathStyle=true
 storage.s3compatible.bucket=stackgres
